2010-09-01  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c :
	  Add new option -M to allow named misc modules to be
	  pre-initialized before others, thus overriding which
	  module is loaded when there is a conflict.

	* src/pdsh/mod.c :
	  Don't generate an error message when module options
	  conflict, since there is now a way to override which
	  module is loaded over another.

	* src/pdsh/opt.c, src/pdsh/opt.h, src/pdsh/main.c :
	  Add opt_args_early function to process options that
	  need to be handled before module loading.

	* src/pdsh/opt.c, src/pdsh/mod.c :
	  New environment variable PDSH_MISC_MODULES may be used to
	  force-initialize a list of misc modules before the others,
	  thus allowing a choice between conflicting modules.

	* src/pdsh/main.c :
	  Call opt_env() before loading modules.

	* src/pdsh/mod.c :
	  Only print module options if the module has been initialized.

	* src/pdsh/mod.c :
	  Split module registration and initialization into two
	  separate functions. First register all modules, then try
	  to initialize them later. This will allow for better filtering
	  of conflicting modules.

	* src/pdsh/mod.c :
	  Add an initialization member to module structure to
	  track whether a loaded module has been fully initialized.

2010-08-31  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Don't require genders filename specified to -F to be an absolute  
	  path. Instead, open genders file relative to PDSH_GENDERS_DIR,
	  which is /etc by default.

	* src/modules/genders.c :
	  Allow alternate genders file to be specified with the env
	  var PDSH_GENDERS_FILE.

	* src/common/hostlist.c :
	  Update to latest hostlist.c from LSD-Tools project with fix for 
	  multiple brackets in hostlists from sf.net user don-fanucci.

2010-03-16  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/ltdl.c, src/pdsh/ltdl.h :
	  Update libltdl from latest RHEL5.4 libtool.

2009-09-29  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.20.
